--- a/FastCode-Api/FastCode1.0/pom.xml
+++ b/FastCode-Api/FastCode1.0/pom.xml
@@ -7,6 +7,18 @@
     <groupId>org.lycoding</groupId>
     <artifactId>FastCode1.0</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -38,6 +50,7 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.12</version>
         </dependency>
+
     </dependencies>
 
 
