--- a/FastCode-Api/FastCode1.0/src/main/resources/application.properties
+++ b/FastCode-Api/FastCode1.0/src/main/resources/application.properties
@@ -2,3 +2,6 @@ db.driverName=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/monitor?useUnicode=true&characterEncoding=utf8
 db.username=root
 db.password=root
+
+#是否忽略表前缀
+ignore.table.prefix=true
